--- a/Network/NetworkTransfer - Backup.csproj
+++ b/Network/NetworkTransfer - Backup.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Google.Protobuf" Version="3.22.4" />
+  </ItemGroup>
+
 </Project>
